Bug 50506 - Drawing error in the indent markers for the new rulers on MacOS X
Summary: Drawing error in the indent markers for the new rulers on MacOS X
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: x86 (IA32) macOS (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.2.0 target:4.1.0.2
Keywords: regression
Depends on:
Blocks: macOS-UI-polish
  Show dependency treegraph
 
Reported: 2012-05-30 08:07 UTC by Roman Eisele
Modified: 2013-06-28 07:13 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Visual comparison of indent marks (13.20 KB, image/png)
2012-05-30 08:08 UTC, Roman Eisele
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Eisele 2012-05-30 08:07:16 UTC
When I compare the new (3.6 Master) look of the LibreOffice rulers with the old (3.5.x) look, I find a little visual problem, probably a drawing error, in the triangualar markers for indent (before text, after text, first line indent).

At least on MacOS X, the border line of these markers used to be a combination of light grey parts and dark grey parts, to give a three-dimensional impression. Now most parts of the border line are black/dark grey, and a little part is white or transparent or completely missing. If I compare this to Kendy's Linux screenshot at

http://artax.karlin.mff.cuni.cz/~kendy/blog/pics/updated-rulers.png

I get the impression that the white/transparent/missing part of the border line on MacOS X is just an error: on Linux, the complete border line is black/dark grey.

You can see this on my Writer screenshots attached to bug 49914:
* old look (3.5.4):      attachment 61808 [details]
* new look (3.6 Master): attachment 62061 [details]

But to make it even easier to see what I mean, I have created a little comparison of the old and the new look with Kendy's Linux screenshot which I will attach as PNG image to this bug report.

The visual problem is visible both in Writer and in Impress, therefore Component = "UI". The screenshots have been created with the Master build dated 2012-05-24, but the rulers look still the same in newer builds (I have tested 2012-05-28).
Comment 1 Roman Eisele 2012-05-30 08:08:52 UTC
Created attachment 62291 [details]
Visual comparison of indent marks
Comment 2 Roman Eisele 2012-05-30 08:18:12 UTC
@Kendy:
This is the first of my reports about visual problems related to the new UI look on MacOS X. I add your address to the CC list.

I will send you a separate mail with a complete list of all my observations (including links to all bug reports) when I am done. Thank you very much in advance!
Comment 3 Roman Eisele 2012-09-25 12:47:03 UTC
This issue is still valid with LibreOffice 3.6.2.1 (Build ID: ba822cc). There is still the same little drawing error.
Comment 4 Uwe Altmann 2012-10-10 19:27:09 UTC
still present in 3.6.2.2
Comment 5 Roman Eisele 2012-10-11 09:08:40 UTC
@ Uwe Altmann:
Thank you for confirming this issue!


@ Kendy, Astron, Thorsten Behrens:

This is a minor issue, but annyoing, because together with bug 49914 it makes LibO 3.6 look worse (instead of better) compared to 3.5 on Mac OS X, and gives the UI an “unprofessional” look. Most probably it should be really easy to fix this -- it is just an off-by-one drawing problem I suppose, or a problem with wrong color selection (like bug 49914).

No chance to fix this? ;-)
Comment 6 Stefan Knorr (astron) 2012-10-11 15:51:21 UTC
While this certainly looks a bit ugly to me, I am probably the wrong person to ask here, since I can be extremely sensitive to such stuff and might overestimate its impact (ask me about the reasons why I avoided the Evolution mail programme for several years if you ever meet me :) ).

In any case, it'd probably good to fix this for 3.7 at least.

Kendy, what are the odds that this custom widget can be replaced with something nicely anti-aliased and a bit less harsh overall? (Maybe even an SVG where we would manipulate some colours at runtime to fit the theme.)
Comment 7 Emir Sarı 2013-02-01 01:13:28 UTC
Ping!
Comment 8 Emir Sarı 2013-06-11 07:27:39 UTC
This looks really ugly, and for months still hasn't been fixed. Any chance someone can fix or show some pointers or tips to fix this at least?
Comment 9 Commit Notification 2013-06-23 04:18:06 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=beb198b8c0dbb97a648d493bdcfb491436165eec

fdo#50506, incomplete indent markers in Mac rulers



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Ahmad Harthi 2013-06-23 12:18:46 UTC
Thanks Khaled,

This is fixed, please include it in LO4.1 RC2
Comment 11 Commit Notification 2013-06-28 07:13:55 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a34f119432489937a0400d3b7692a40736a326ba&h=libreoffice-4-1

fdo#50506, incomplete indent markers in Mac rulers


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.