fdo#50506, incomplete indent markers in Mac rulers

AquaSalGraphics::drawPolygon() should close the path like other polygon
drawing functions. It have been like that for 5 years since
3ca40fb8a2e8c805517b351ebd97c1385cfc92a3, no idea how it was never
noticed.

Change-Id: Ifba740afa66ad485943c7873d78e007b778cd7b3
Reviewed-on: https://gerrit.libreoffice.org/4448
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>